have fixed issue but need to add underline for gradient button on mobile

--- a/style.css
+++ b/style.css
@@ -552,6 +552,13 @@ footer .copyright {
     display: block;
   }
 
+  .navbar .gradient-btn {
+    background: none;
+    color: inherit;
+    transform: scale(1);
+    box-shadow: none;
+  }
+
   .home {
     flex-direction: column-reverse;
     margin: 5rem 0;
